--- a/flask/README.org
+++ b/flask/README.org
@@ -25,3 +25,6 @@ The homework will be posted in the #cstopics-hw channel.
 Upload your solutions to the assigned homework in the appropriate
 folder. Make sure to use the filenames specified in the assignments.
 
+Username: jmtheo8
+
+https://github.com/hunter-teacher-cert/csci70700-spring-2023-jmtheo8/edit/main/flask/README.org
