--- a/graphics_3d/README.org
+++ b/graphics_3d/README.org
@@ -1,27 +1,13 @@
-* Instructions
+NAME: Jerusha Theobald (jmtheo8)
 
-** If you are presenting this unit:
+Following are replit links to my 3D Graphics A-FRAME homework assignment:
 
-*** Upload instructions
-Upload all content relating to the delivery of your unit. Include the
-prework, slides, content etc.
+ILLUSTRATION OF SCALING:
+https://replit.com/@jmtheo8/asdfff#index.html
 
-Please use these filenames:
-- *homework.md*, *homework.pdf*, or *homework.docx* for the homework
-  assignment
-- *prework.md*, *prework.pdf*, or *prework.docx* if you are giving
-  links to videos or online resources for prework
-- Other files should be given names that make sense
-*** Assigning the work
-- make sure to post the prework one week before your presentation in
-  the #cstopics-async channel.
-- make sure to post the homework after your group presentation in the
-  #cstopics-hw channel.
-  
-** If you are completing the homework for this unit:
+ILLUTRATION OF TRANSLATION:
+https://replit.com/@jmtheo8/AF2TRANSLATION#index.html
+https://replit.com/@jmtheo8/AF1#index.html
 
-The homework will be posted in the #cstopics-hw channel.
-
-Upload your solutions to the assigned homework in the appropriate
-folder. Make sure to use the filenames specified in the assignments.
-
+ILLUTRATION OF ROTATION:
+https://replit.com/@jmtheo8/AF3ROTATE#index.html
